# TpxServer

./: CMakeLists.txt
ext/toml/include/: toml.hpp
include/: BgThread.h  common_defs.h  logger.h
include/server/: ClusterThread.h  ClusteringManager.h  CommsThread.h  HistogramManager.h  HistogramThread.h  PythonConnectionManager.h  SecondaryThread.h  ServerCodes.h  TimepixCodes.h  TimepixCommandInfo.h  TimepixConnectionManager.h  UdpConnectionManager.h  UdpThread.h
include/ui/: LogWindow.h  MainWindow.h  SettingsPanel.h  StatusPanel.h
src/: BgThread.cpp  clustering_test.cpp  log.cpp  main.cpp
src/server/: ClusterThread.cpp  ClusteringManager.cpp  CommsThread.cpp  HistogramManager.cpp  HistogramThread.cpp  PythonConnectionManager.cpp  SecondaryThread.cpp  TimepixConnectionManager.cpp  UdpConnectionManager.cpp  UdpThread.cpp
src/ui/: LogWindow.cpp  MainWindow.cpp  SettingsPanel.cpp  StatusPanel.cpp
test/: DummySpidr.cpp  DummySpidr.h
